--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 # Add large webGL file to git lfs
 WebGLBuild/Build/*.data.unityweb filter=lfs diff=lfs merge=lfs -text
 **.data.unityweb filter=lfs diff=lfs merge=lfs -text
+*.data.unityweb filter=lfs diff=lfs merge=lfs -text
